taxon browser fix card border overlap

--- a/src/app/shared-modules/taxon-browser/taxon-mosaic/taxon-mosaic.component.scss
+++ b/src/app/shared-modules/taxon-browser/taxon-mosaic/taxon-mosaic.component.scss
@@ -50,14 +50,18 @@
     &:hover {
         box-shadow: 0 7px 30px rgba(#000, 0.25);
     }
+    max-width: 350px;
+    @include media-breakpoint-down(xs) {
+        max-width: 250px;
+    }
 }
 
 .mosaic-child-established {
-    border: 2px solid hsl(0, 40, 70);
+    box-shadow: 0 0 0 2px hsl(0, 40, 70), 0px 2px 5px 1px rgba(#000, 0.25);
 }
 
 .mosaic-child-sporadic {
-    border: 2px solid hsl(50, 60, 70);
+    box-shadow: 0 0 0 2px hsl(50, 60, 70), 0px 2px 5px 1px rgba(#000, 0.25);
 }
 
 .mosaic-img {
@@ -143,4 +147,8 @@
     border-radius: 15px;
     box-shadow: 2px 2px 10px $neutral-4;
     text-align: center;
+
+    @include media-breakpoint-down(xs) {
+        width: 250px;
+    }
 }
